# libvibrant

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  NOTICE  README.md  demo.c  dreamcolor-demo  dreamcolor-demo.c  flake.nix  help.txt  main.c  sonar-project.properties
cli/: CMakeLists.txt
cmake/: FindCheck.cmake
include/vibrant/: ctm.h  nvidia.h
nix/: package.nix
src/: CMakeLists.txt  main.c  util.c  vibrant.c  vibrant.pc.in
src/vibrant/: CMakeLists.txt  ctm.c  ctm.h  util.c  utilx.c  vibrant.c  vibrant.h
vibrant/: CMakeLists.txt
vibrant-cli/: CMakeLists.txt
vibrant-cli/src/: main.c
vibrant/include/vibrant/: ctm.h  nvidia.h  vibrant.h
vibrant/src/: ctm.c  nvidia.c  util.c  utilx.c  vibrant.c
vibrant/tests/: CMakeLists.txt  check_util.c
